Closed Bug 973296 Opened 11 years ago Closed 11 years ago

vm/ForkJoin.cpp:1318:9: error: use of undeclared identifier 'CALL_GENERATED_CODE' (--disable-yarr-jit)

Categories

(Core :: JavaScript Engine, defect)

x86_64
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30
Tracking Status
firefox29 --- fixed
firefox30 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

$ ./configure --enable-ion --disable-yarr-jit --with-system-icu $ gmake ... In file included from js/src/js/src/Unified_cpp_js_src8.cpp:158: js/src/vm/ForkJoin.cpp:1318:9: error: use of undeclared identifier 'CALL_GENERATED_CODE' CALL_GENERATED_CODE(enter_, jitcode_, argc_ + 1, argv_ + 1, nullptr... ^ js/src/vm/ForkJoin.cpp:1524:23: note: in instantiation of member function 'ParallelIonInvoke<2>::invoke' requested here bool ok = fii.invoke(perThread); ^ 1 error generated.
fwiw CALL_GENERATED_CODE should be defined in js/src/jit/JitCommon.h and this should be included in ForkJoin.cpp via js/src/jit/BaselineJIT.h
Adding #error would show how the bootlegging via Yarr occurs vm/ForkJoin.cpp:13: vm/ForkJoin.h:14: gc/GCInternals.h:11: jsworkers.h:22: frontend/TokenStream.h:23: vm/RegExpObject.h:20: yarr/YarrJIT.h:50: jit/JitCommon.h
Attachment #8376787 - Flags: review?(jdemooij)
Attachment #8376787 - Flags: review?(jdemooij) → review+
Keywords: checkin-needed
Comment on attachment 8376787 [details] [diff] [review] include explicitly [Approval Request Comment] Bug caused by (feature/regressing bug #): regression from bug 959597 User impact if declined: broken build with --disable-yarr-jit on ff29 Risk to taking this patch (and alternatives if risky): none
Attachment #8376787 - Flags: approval-mozilla-aurora?
I will approve this uplift once it landed in m-c.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Attachment #8376787 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: