Bug 973296 - Pull JitCommon.h explicitly for CALL_GENERATED_CODE. r=jandem, a=sledru